@@ -1,15 +1,15 @@
 pkgbase = lwjgl
 	pkgdesc = Lightweight Java Game Library - for use in game projects in Java.
-	pkgver = 2.8.3
+	pkgver = 2.8.4
 	pkgrel = 1
 	url = http://lwjgl.org/
 	changelog = ChangeLog
 	arch = any
 	license = BSD
 	options = !strip
-	source = http://downloads.sourceforge.net/java-game-lib/lwjgl-2.8.3.zip
-	md5sums = c23a4c90e898caff00c19e5e27d8c82c
-	sha1sums = 3cc6f2ddb3be1b01d2a7736dd33a52d7fdfcd7c9
+	source = http://downloads.sourceforge.net/java-game-lib/lwjgl-2.8.4.zip
+	md5sums = 6f943316819aa0c413190096df16f5d9
+	sha1sums = 3812c04dc0ccce1d4926d64dab298be62ea06ca8
 
 pkgname = lwjgl
 
